--- a/Solução/Projeto/package.json
+++ b/Solução/Projeto/package.json
@@ -2,9 +2,12 @@
   "name": "projeto",
   "version": "1.0.0",
   "description": "WebSite Aplication",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"   
   },
   "author": "JFelipeAB",
   "license": "ISC",
@@ -13,5 +16,14 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/den-silva/Rpg-Republic"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
